MAL import basic
