# app/Http/Requests/MALImport.php
@@ -3,9 +3,9 @@
 namespace App\Http\Requests;
 
 use App\User;
-use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
-class MALImport extends FormRequest
+class MALImport extends KuroFormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -27,7 +27,8 @@ class MALImport extends FormRequest
     public function rules()
     {
         return [
-            //
+            'file'      => ['required', 'file', 'mimes:xml', 'max:' . config('mal-import.max_xml_file_size')],
+            'behavior'  => ['required', 'string', Rule::in(['overwrite'])]
         ];
     }
 }
